file(GLOB SRC_FILES *.h *.cpp)

if(USE_NVTX AND WIN32)
    add_definitions(-DUSE_NVTX)
    include_directories("$ENV{NVTOOLSEXT_PATH}/include")
    link_directories("$ENV{NVTOOLSEXT_PATH}/lib/x64")
endif()

include_directories(${EXT_INCLUDE_DIRS})

if(USE_OPENEXR)
    set(OPENEXR_LIB IlmImf)
    add_definitions(-DUSE_OPENEXR)
endif()

if(USE_JXL)
    add_definitions(-DUSE_JXL)
endif()

if(USE_AVIF)
    add_definitions(-DUSE_AVIF)
endif()

if(USE_WEBP)
    add_definitions(-DUSE_WEBP)
endif()

if(USE_TIFF)
    add_definitions(-DUSE_TIFF)
endif()

if(USE_SVG)
    add_definitions(-DUSE_SVG)
endif()

if(USE_DDS)
    add_definitions(-DUSE_DDS)
    # gli is header-only; ext/ is already in EXT_INCLUDE_DIRS
endif()

if(WIN32 AND USE_VIDEO)
    add_definitions(-DUSE_VIDEO)
endif()

# Run custom command to convert binary files into uint8_t arrays that could
# be included in main application sources.
# Glob up resource files
file(GLOB RESOURCE_FILES 
    "${PROJECT_SOURCE_DIR}/resources/fonts/*.ttf"
    "${PROJECT_SOURCE_DIR}/resources/icons/*.png")

add_executable(res2c ${PROJECT_SOURCE_DIR}/resources/res2c.cpp ${DOCOPT_SRC_FILES})

add_custom_command(
  OUTPUT resources.cpp resources.h
  COMMAND res2c ARGS --binary ${RESOURCE_FILES}
  DEPENDS ${RESOURCE_FILES}
  COMMENT "Running res2c to convert fonts and icons"
  PRE_BUILD VERBATIM)

set(EXTRA_SRC_FILES ${EXTRA_SRC_FILES} resources.cpp)

if(EMBED_SHADERS)
  file(GLOB SHADER_FILES "${PROJECT_SOURCE_DIR}/shaders/*.*")
  message(STATUS "Shader files ${SHADER_FILES}")
  
  set(EXTRA_SRC_FILES ${EXTRA_SRC_FILES} shader_resources.h)
  add_definitions(-DEMBED_SHADERS)

  add_custom_command(
    OUTPUT shader_resources.h
    COMMAND res2c ARGS --shaders ${SHADER_FILES}
    DEPENDS ${SHADER_FILES}
    COMMENT "Running res2c to merge shader files"
    PRE_BUILD VERBATIM)
endif()

include_directories(${CMAKE_CURRENT_BINARY_DIR})  # This is used for the autogenerated resource files.

add_definitions(-D_CRT_SECURE_NO_WARNINGS -DVERSION="${VERSION}")

if(WIN32)
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup")
    set(GL_LIBS glu32 OpenGL32)
elseif(UNIX AND NOT APPLE)
    set(GL_LIBS GL)
endif()

add_executable(${PROJECT_NAME} ${SRC_FILES} ${IMGUI_SRC_FILES} 
               ${GL3W_SRC_FILES} ${DOCOPT_SRC_FILES} ${EXTRA_SRC_FILES})
# Video pipeline UI/logging and other debug-only hooks: Debug config only (not RelWithDebInfo / Release).
target_compile_definitions(${PROJECT_NAME} PRIVATE $<$<CONFIG:Debug>:BAKTSIU_DEBUG_BUILD=1>)
source_group("External Files\\gl3w"   FILES ${GL3W_SRC_FILES})
source_group("External Files\\imgui"  FILES ${IMGUI_SRC_FILES})
source_group("External Files\\docopt" FILES ${DOCOPT_SRC_FILES})

set(VIDEO_LIBS "")
if(WIN32 AND USE_VIDEO)
    # Default search path when MPV_ROOT is unset (see third_party/mpv/README.md).
    set(_baktsiu_mpv_repo_default "${CMAKE_SOURCE_DIR}/third_party/mpv")

    set(MPV_ROOT "" CACHE PATH "Root of a libmpv dev tree (optional; used to find headers/lib when MPV_* are empty)")
    set(MPV_INCLUDE_DIR "" CACHE PATH "Directory containing mpv/client.h (leave empty to search via MPV_ROOT / MPV_ROOT env)")
    set(MPV_LIBRARY "" CACHE FILEPATH "mpv import .lib (leave empty to search via MPV_ROOT / MPV_ROOT env)")
    set(MPV_DLL "" CACHE FILEPATH "libmpv-2.dll (optional; copied next to the executable if set)")

    if(NOT MPV_INCLUDE_DIR)
        # Typical: <root>/include/mpv/client.h (#include <mpv/client.h> → add .../include).
        # Also common: <root>/mpv/client.h (add .../root).
        find_path(_baktsiu_mpv_include
            NAMES mpv/client.h
            HINTS "${MPV_ROOT}" "${_baktsiu_mpv_repo_default}" ENV MPV_ROOT
            PATH_SUFFIXES include "")
        if(_baktsiu_mpv_include)
            set(MPV_INCLUDE_DIR "${_baktsiu_mpv_include}" CACHE PATH "Directory containing mpv/client.h" FORCE)
        endif()
    endif()
    if(NOT MPV_INCLUDE_DIR)
        # Some trees only expose .../include/mpv/client.h to find_path as plain client.h.
        find_path(_baktsiu_mpv_client_h
            NAMES client.h
            HINTS "${MPV_ROOT}" "${_baktsiu_mpv_repo_default}" ENV MPV_ROOT
            PATH_SUFFIXES "include/mpv" mpv)
        if(_baktsiu_mpv_client_h)
            get_filename_component(_baktsiu_mpv_include_from_sub "${_baktsiu_mpv_client_h}" DIRECTORY)
            get_filename_component(_baktsiu_mpv_include_parent "${_baktsiu_mpv_include_from_sub}" DIRECTORY)
            if(EXISTS "${_baktsiu_mpv_include_parent}/mpv/client.h")
                set(MPV_INCLUDE_DIR "${_baktsiu_mpv_include_parent}" CACHE PATH "Directory containing mpv/client.h" FORCE)
            endif()
        endif()
    endif()
    if(NOT MPV_LIBRARY)
        find_library(_baktsiu_mpv_lib
            NAMES libmpv-2 mpv libmpv mpv-2 mpv-1
            HINTS "${MPV_ROOT}" "${MPV_ROOT}/lib" "${_baktsiu_mpv_repo_default}" "${_baktsiu_mpv_repo_default}/lib"
                ENV MPV_ROOT
            PATH_SUFFIXES "" lib lib/x64)
        if(_baktsiu_mpv_lib)
            set(MPV_LIBRARY "${_baktsiu_mpv_lib}" CACHE FILEPATH "libmpv import library" FORCE)
        endif()
    endif()
    if(NOT MPV_DLL)
        set(_baktsiu_mpv_dll_hints)
        list(APPEND _baktsiu_mpv_dll_hints "${_baktsiu_mpv_repo_default}")
        if(MPV_ROOT)
            list(APPEND _baktsiu_mpv_dll_hints "${MPV_ROOT}")
        endif()
        if(DEFINED ENV{MPV_ROOT})
            list(APPEND _baktsiu_mpv_dll_hints "$ENV{MPV_ROOT}")
        endif()
        if(MPV_LIBRARY)
            get_filename_component(_baktsiu_mpv_libdir "${MPV_LIBRARY}" DIRECTORY)
            list(APPEND _baktsiu_mpv_dll_hints "${_baktsiu_mpv_libdir}" "${_baktsiu_mpv_libdir}/..")
        endif()
        if(_baktsiu_mpv_dll_hints)
            find_file(_baktsiu_mpv_dll
                NAMES libmpv-2.dll mpv-2.dll mpv.dll
                HINTS ${_baktsiu_mpv_dll_hints}
                PATH_SUFFIXES "" bin)
            if(_baktsiu_mpv_dll)
                set(MPV_DLL "${_baktsiu_mpv_dll}" CACHE FILEPATH "libmpv-2.dll (optional; post-build copy)" FORCE)
            endif()
        endif()
    endif()

    if(NOT MPV_INCLUDE_DIR OR NOT MPV_LIBRARY)
        message(FATAL_ERROR
            "USE_VIDEO is ON but libmpv was not found.\n"
            "  Extract mpv-dev into third_party/mpv (see third_party/mpv/README.md), or set CMake cache MPV_ROOT,\n"
            "  or MPV_INCLUDE_DIR + MPV_LIBRARY, or environment MPV_ROOT, or turn off video: -DUSE_VIDEO=OFF\n"
            "  (headers need mpv/client.h; link against the mpv import .lib; run with libmpv-2.dll next to the exe).")
    endif()
    if(NOT EXISTS "${MPV_INCLUDE_DIR}/mpv/client.h")
        message(FATAL_ERROR
            "USE_VIDEO: MPV_INCLUDE_DIR does not contain mpv/client.h.\n"
            "  MPV_INCLUDE_DIR=${MPV_INCLUDE_DIR}\n"
            "  Expected file: ${MPV_INCLUDE_DIR}/mpv/client.h\n"
            "  Clear MPV_INCLUDE_DIR in the CMake cache and set MPV_ROOT to the extracted mpv-dev folder, or point\n"
            "  MPV_INCLUDE_DIR at the directory that *contains* the \"mpv\" subfolder (often .../include, not .../include/mpv).")
    endif()
    target_include_directories(${PROJECT_NAME} PRIVATE "${MPV_INCLUDE_DIR}")
    list(APPEND VIDEO_LIBS "${MPV_LIBRARY}")
endif()

set(JXL_LIBS "")
set(JXL_DLLS "")
if(USE_JXL)
    set(_baktsiu_jxl_repo_default "${CMAKE_SOURCE_DIR}/third_party/libjxl")

    set(JXL_ROOT "" CACHE PATH "Root of libjxl dev tree (include/, lib/, bin/)")
    set(JXL_INCLUDE_DIR "" CACHE PATH "Directory containing jxl/decode.h")
    set(JXL_LIBRARY_DIR "" CACHE PATH "Directory containing jxl.lib")

    if(JXL_INCLUDE_DIR AND NOT EXISTS "${JXL_INCLUDE_DIR}/jxl/decode.h")
        unset(JXL_INCLUDE_DIR CACHE)
    endif()
    if(JXL_LIBRARY_DIR AND NOT EXISTS "${JXL_LIBRARY_DIR}/jxl.lib")
        unset(JXL_LIBRARY_DIR CACHE)
    endif()

    if(EXISTS "${_baktsiu_jxl_repo_default}/include/jxl/decode.h")
        set(JXL_INCLUDE_DIR "${_baktsiu_jxl_repo_default}/include" CACHE PATH "Directory containing jxl/decode.h" FORCE)
    elseif(JXL_ROOT AND EXISTS "${JXL_ROOT}/include/jxl/decode.h")
        set(JXL_INCLUDE_DIR "${JXL_ROOT}/include" CACHE PATH "Directory containing jxl/decode.h" FORCE)
    elseif(NOT JXL_INCLUDE_DIR)
        find_path(_baktsiu_jxl_include
            NAMES jxl/decode.h
            HINTS "${JXL_ROOT}" ENV JXL_ROOT
            PATH_SUFFIXES include "")
        if(_baktsiu_jxl_include)
            set(JXL_INCLUDE_DIR "${_baktsiu_jxl_include}" CACHE PATH "Directory containing jxl/decode.h" FORCE)
        endif()
    endif()

    if(EXISTS "${_baktsiu_jxl_repo_default}/lib/jxl.lib")
        set(JXL_LIBRARY_DIR "${_baktsiu_jxl_repo_default}/lib" CACHE PATH "Directory containing jxl.lib" FORCE)
    elseif(JXL_ROOT AND EXISTS "${JXL_ROOT}/lib/jxl.lib")
        set(JXL_LIBRARY_DIR "${JXL_ROOT}/lib" CACHE PATH "Directory containing jxl.lib" FORCE)
    elseif(NOT JXL_LIBRARY_DIR)
        find_path(_baktsiu_jxl_libdir
            NAMES jxl.lib
            HINTS "${JXL_ROOT}/lib" "${JXL_ROOT}" ENV JXL_ROOT
            PATH_SUFFIXES lib lib/x64 "")
        if(_baktsiu_jxl_libdir)
            set(JXL_LIBRARY_DIR "${_baktsiu_jxl_libdir}" CACHE PATH "Directory containing jxl.lib" FORCE)
        endif()
    endif()

    if(NOT JXL_INCLUDE_DIR OR NOT JXL_LIBRARY_DIR)
        message(FATAL_ERROR
            "USE_JXL is ON but libjxl was not found.\n"
            "  Install with vcpkg (libjxl:x64-windows) and copy into third_party/libjxl\n"
            "  (see third_party/libjxl/README.md), or set JXL_ROOT / JXL_INCLUDE_DIR + JXL_LIBRARY_DIR,\n"
            "  or turn off JPEG XL: -DUSE_JXL=OFF")
    endif()

    target_include_directories(${PROJECT_NAME} PRIVATE "${JXL_INCLUDE_DIR}")
    foreach(_baktsiu_jxl_lib jxl jxl_cms jxl_threads)
        if(EXISTS "${JXL_LIBRARY_DIR}/${_baktsiu_jxl_lib}.lib")
            list(APPEND JXL_LIBS "${JXL_LIBRARY_DIR}/${_baktsiu_jxl_lib}.lib")
        endif()
    endforeach()
    if(JXL_LIBS STREQUAL "")
        message(FATAL_ERROR "USE_JXL: no jxl*.lib found in JXL_LIBRARY_DIR=${JXL_LIBRARY_DIR}")
    endif()

    set(_baktsiu_jxl_bin_hints)
    if(JXL_ROOT)
        list(APPEND _baktsiu_jxl_bin_hints "${JXL_ROOT}/bin" "${JXL_ROOT}")
    endif()
    list(APPEND _baktsiu_jxl_bin_hints "${_baktsiu_jxl_repo_default}/bin" "${_baktsiu_jxl_repo_default}")
    if(JXL_LIBRARY_DIR)
        list(APPEND _baktsiu_jxl_bin_hints "${JXL_LIBRARY_DIR}/../bin")
    endif()
    if(DEFINED ENV{JXL_ROOT})
        list(APPEND _baktsiu_jxl_bin_hints "$ENV{JXL_ROOT}/bin" "$ENV{JXL_ROOT}")
    endif()
    file(GLOB _baktsiu_jxl_dlls
        LIST_DIRECTORIES false
        ${_baktsiu_jxl_bin_hints}/jxl*.dll
        ${_baktsiu_jxl_bin_hints}/brotli*.dll
        ${_baktsiu_jxl_bin_hints}/hwy.dll
        ${_baktsiu_jxl_bin_hints}/lcms2-2.dll)
    if(_baktsiu_jxl_dlls)
        list(REMOVE_DUPLICATES _baktsiu_jxl_dlls)
        set(JXL_DLLS "${_baktsiu_jxl_dlls}" CACHE INTERNAL "libjxl runtime DLLs for post-build copy")
    endif()
endif()

set(AVIF_LIBS "")
set(AVIF_DLLS "")
if(USE_AVIF)
    set(_baktsiu_avif_repo_default "${CMAKE_SOURCE_DIR}/third_party/libavif")

    set(AVIF_ROOT "" CACHE PATH "Root of libavif dev tree (include/, lib/, bin/)")
    set(AVIF_INCLUDE_DIR "" CACHE PATH "Directory containing avif/avif.h")
    set(AVIF_LIBRARY_DIR "" CACHE PATH "Directory containing avif.lib")

    if(AVIF_INCLUDE_DIR AND NOT EXISTS "${AVIF_INCLUDE_DIR}/avif/avif.h")
        unset(AVIF_INCLUDE_DIR CACHE)
    endif()
    if(AVIF_LIBRARY_DIR AND NOT EXISTS "${AVIF_LIBRARY_DIR}/avif.lib")
        unset(AVIF_LIBRARY_DIR CACHE)
    endif()

    if(EXISTS "${_baktsiu_avif_repo_default}/include/avif/avif.h")
        set(AVIF_INCLUDE_DIR "${_baktsiu_avif_repo_default}/include" CACHE PATH "Directory containing avif/avif.h" FORCE)
    elseif(AVIF_ROOT AND EXISTS "${AVIF_ROOT}/include/avif/avif.h")
        set(AVIF_INCLUDE_DIR "${AVIF_ROOT}/include" CACHE PATH "Directory containing avif/avif.h" FORCE)
    elseif(NOT AVIF_INCLUDE_DIR)
        find_path(_baktsiu_avif_include
            NAMES avif/avif.h
            HINTS "${AVIF_ROOT}" ENV AVIF_ROOT
            PATH_SUFFIXES include "")
        if(_baktsiu_avif_include)
            set(AVIF_INCLUDE_DIR "${_baktsiu_avif_include}" CACHE PATH "Directory containing avif/avif.h" FORCE)
        endif()
    endif()

    if(EXISTS "${_baktsiu_avif_repo_default}/lib/avif.lib")
        set(AVIF_LIBRARY_DIR "${_baktsiu_avif_repo_default}/lib" CACHE PATH "Directory containing avif.lib" FORCE)
    elseif(AVIF_ROOT AND EXISTS "${AVIF_ROOT}/lib/avif.lib")
        set(AVIF_LIBRARY_DIR "${AVIF_ROOT}/lib" CACHE PATH "Directory containing avif.lib" FORCE)
    elseif(NOT AVIF_LIBRARY_DIR)
        find_path(_baktsiu_avif_libdir
            NAMES avif.lib
            HINTS "${AVIF_ROOT}/lib" "${AVIF_ROOT}" ENV AVIF_ROOT
            PATH_SUFFIXES lib lib/x64 "")
        if(_baktsiu_avif_libdir)
            set(AVIF_LIBRARY_DIR "${_baktsiu_avif_libdir}" CACHE PATH "Directory containing avif.lib" FORCE)
        endif()
    endif()

    if(NOT AVIF_INCLUDE_DIR OR NOT AVIF_LIBRARY_DIR)
        message(FATAL_ERROR
            "USE_AVIF is ON but libavif was not found.\n"
            "  Install with vcpkg (libavif:x64-windows) and copy into third_party/libavif\n"
            "  or set AVIF_ROOT / AVIF_INCLUDE_DIR + AVIF_LIBRARY_DIR,\n"
            "  or turn off AVIF: -DUSE_AVIF=OFF")
    endif()

    target_include_directories(${PROJECT_NAME} PRIVATE "${AVIF_INCLUDE_DIR}")
    if(EXISTS "${AVIF_LIBRARY_DIR}/avif.lib")
        list(APPEND AVIF_LIBS "${AVIF_LIBRARY_DIR}/avif.lib")
    endif()
    if(AVIF_LIBS STREQUAL "")
        message(FATAL_ERROR "USE_AVIF: avif.lib not found in AVIF_LIBRARY_DIR=${AVIF_LIBRARY_DIR}")
    endif()

    set(_baktsiu_avif_bin_hints)
    if(AVIF_ROOT)
        list(APPEND _baktsiu_avif_bin_hints "${AVIF_ROOT}/bin" "${AVIF_ROOT}")
    endif()
    list(APPEND _baktsiu_avif_bin_hints "${_baktsiu_avif_repo_default}/bin" "${_baktsiu_avif_repo_default}")
    if(AVIF_LIBRARY_DIR)
        list(APPEND _baktsiu_avif_bin_hints "${AVIF_LIBRARY_DIR}/../bin")
    endif()
    if(DEFINED ENV{AVIF_ROOT})
        list(APPEND _baktsiu_avif_bin_hints "$ENV{AVIF_ROOT}/bin" "$ENV{AVIF_ROOT}")
    endif()
    file(GLOB _baktsiu_avif_dlls
        LIST_DIRECTORIES false
        ${_baktsiu_avif_bin_hints}/avif*.dll
        ${_baktsiu_avif_bin_hints}/dav1d.dll
        ${_baktsiu_avif_bin_hints}/libyuv.dll
        ${_baktsiu_avif_bin_hints}/jpeg*.dll
        ${_baktsiu_avif_bin_hints}/turbojpeg.dll)
    if(_baktsiu_avif_dlls)
        list(REMOVE_DUPLICATES _baktsiu_avif_dlls)
        set(AVIF_DLLS "${_baktsiu_avif_dlls}" CACHE INTERNAL "libavif runtime DLLs for post-build copy")
    endif()
endif()

set(WEBP_LIBS "")
set(WEBP_DLLS "")
if(USE_WEBP)
    set(_baktsiu_webp_repo_default "${CMAKE_SOURCE_DIR}/third_party/libwebp")

    set(WEBP_ROOT "" CACHE PATH "Root of libwebp dev tree (include/, lib/, bin/)")
    set(WEBP_INCLUDE_DIR "" CACHE PATH "Directory containing webp/decode.h")
    set(WEBP_LIBRARY_DIR "" CACHE PATH "Directory containing webp.lib")

    if(WEBP_INCLUDE_DIR AND NOT EXISTS "${WEBP_INCLUDE_DIR}/webp/decode.h")
        unset(WEBP_INCLUDE_DIR CACHE)
    endif()
    if(WEBP_LIBRARY_DIR AND NOT EXISTS "${WEBP_LIBRARY_DIR}/libwebp.lib")
        unset(WEBP_LIBRARY_DIR CACHE)
    endif()

    if(EXISTS "${_baktsiu_webp_repo_default}/include/webp/decode.h")
        set(WEBP_INCLUDE_DIR "${_baktsiu_webp_repo_default}/include" CACHE PATH "Directory containing webp/decode.h" FORCE)
    elseif(WEBP_ROOT AND EXISTS "${WEBP_ROOT}/include/webp/decode.h")
        set(WEBP_INCLUDE_DIR "${WEBP_ROOT}/include" CACHE PATH "Directory containing webp/decode.h" FORCE)
    elseif(NOT WEBP_INCLUDE_DIR)
        find_path(_baktsiu_webp_include
            NAMES webp/decode.h
            HINTS "${WEBP_ROOT}" ENV WEBP_ROOT
            PATH_SUFFIXES include "")
        if(_baktsiu_webp_include)
            set(WEBP_INCLUDE_DIR "${_baktsiu_webp_include}" CACHE PATH "Directory containing webp/decode.h" FORCE)
        endif()
    endif()

    if(EXISTS "${_baktsiu_webp_repo_default}/lib/libwebp.lib")
        set(WEBP_LIBRARY_DIR "${_baktsiu_webp_repo_default}/lib" CACHE PATH "Directory containing libwebp.lib" FORCE)
    elseif(WEBP_ROOT AND EXISTS "${WEBP_ROOT}/lib/libwebp.lib")
        set(WEBP_LIBRARY_DIR "${WEBP_ROOT}/lib" CACHE PATH "Directory containing libwebp.lib" FORCE)
    elseif(NOT WEBP_LIBRARY_DIR)
        find_path(_baktsiu_webp_libdir
            NAMES libwebp.lib
            HINTS "${WEBP_ROOT}/lib" "${WEBP_ROOT}" ENV WEBP_ROOT
            PATH_SUFFIXES lib lib/x64 "")
        if(_baktsiu_webp_libdir)
            set(WEBP_LIBRARY_DIR "${_baktsiu_webp_libdir}" CACHE PATH "Directory containing libwebp.lib" FORCE)
        endif()
    endif()

    if(NOT WEBP_INCLUDE_DIR OR NOT WEBP_LIBRARY_DIR)
        message(FATAL_ERROR
            "USE_WEBP is ON but libwebp was not found.\n"
            "  Install with vcpkg (libwebp:x64-windows) and copy into third_party/libwebp\n"
            "  or set WEBP_ROOT / WEBP_INCLUDE_DIR + WEBP_LIBRARY_DIR,\n"
            "  or turn off WebP: -DUSE_WEBP=OFF")
    endif()

    target_include_directories(${PROJECT_NAME} PRIVATE "${WEBP_INCLUDE_DIR}")
    foreach(_baktsiu_webp_lib libwebp libwebpdecoder)
        if(EXISTS "${WEBP_LIBRARY_DIR}/${_baktsiu_webp_lib}.lib")
            list(APPEND WEBP_LIBS "${WEBP_LIBRARY_DIR}/${_baktsiu_webp_lib}.lib")
        endif()
    endforeach()
    if(WEBP_LIBS STREQUAL "")
        message(FATAL_ERROR "USE_WEBP: no libwebp*.lib found in WEBP_LIBRARY_DIR=${WEBP_LIBRARY_DIR}")
    endif()

    set(_baktsiu_webp_bin_hints)
    if(WEBP_ROOT)
        list(APPEND _baktsiu_webp_bin_hints "${WEBP_ROOT}/bin" "${WEBP_ROOT}")
    endif()
    list(APPEND _baktsiu_webp_bin_hints "${_baktsiu_webp_repo_default}/bin" "${_baktsiu_webp_repo_default}")
    if(WEBP_LIBRARY_DIR)
        list(APPEND _baktsiu_webp_bin_hints "${WEBP_LIBRARY_DIR}/../bin")
    endif()
    if(DEFINED ENV{WEBP_ROOT})
        list(APPEND _baktsiu_webp_bin_hints "$ENV{WEBP_ROOT}/bin" "$ENV{WEBP_ROOT}")
    endif()
    file(GLOB _baktsiu_webp_dlls
        LIST_DIRECTORIES false
        ${_baktsiu_webp_bin_hints}/libwebp.dll
        ${_baktsiu_webp_bin_hints}/libwebpdecoder.dll
        ${_baktsiu_webp_bin_hints}/libsharpyuv.dll)
    if(_baktsiu_webp_dlls)
        list(REMOVE_DUPLICATES _baktsiu_webp_dlls)
        set(WEBP_DLLS "${_baktsiu_webp_dlls}" CACHE INTERNAL "libwebp runtime DLLs for post-build copy")
    endif()
endif()

set(TIFF_LIBS "")
set(TIFF_DLLS "")
if(USE_TIFF)
    set(_baktsiu_tiff_repo_default "${CMAKE_SOURCE_DIR}/third_party/libtiff")

    set(TIFF_ROOT "" CACHE PATH "Root of libtiff dev tree (include/, lib/, bin/)")
    set(TIFF_INCLUDE_DIR "" CACHE PATH "Directory containing tiffio.h")
    set(TIFF_LIBRARY_DIR "" CACHE PATH "Directory containing tiff.lib")

    if(TIFF_INCLUDE_DIR AND NOT EXISTS "${TIFF_INCLUDE_DIR}/tiffio.h")
        unset(TIFF_INCLUDE_DIR CACHE)
    endif()
    if(TIFF_LIBRARY_DIR AND NOT EXISTS "${TIFF_LIBRARY_DIR}/tiff.lib")
        unset(TIFF_LIBRARY_DIR CACHE)
    endif()

    if(EXISTS "${_baktsiu_tiff_repo_default}/include/tiffio.h")
        set(TIFF_INCLUDE_DIR "${_baktsiu_tiff_repo_default}/include" CACHE PATH "Directory containing tiffio.h" FORCE)
    elseif(TIFF_ROOT AND EXISTS "${TIFF_ROOT}/include/tiffio.h")
        set(TIFF_INCLUDE_DIR "${TIFF_ROOT}/include" CACHE PATH "Directory containing tiffio.h" FORCE)
    elseif(NOT TIFF_INCLUDE_DIR)
        find_path(_baktsiu_tiff_include
            NAMES tiffio.h
            HINTS "${TIFF_ROOT}" ENV TIFF_ROOT
            PATH_SUFFIXES include "")
        if(_baktsiu_tiff_include)
            set(TIFF_INCLUDE_DIR "${_baktsiu_tiff_include}" CACHE PATH "Directory containing tiffio.h" FORCE)
        endif()
    endif()

    if(EXISTS "${_baktsiu_tiff_repo_default}/lib/tiff.lib")
        set(TIFF_LIBRARY_DIR "${_baktsiu_tiff_repo_default}/lib" CACHE PATH "Directory containing tiff.lib" FORCE)
    elseif(TIFF_ROOT AND EXISTS "${TIFF_ROOT}/lib/tiff.lib")
        set(TIFF_LIBRARY_DIR "${TIFF_ROOT}/lib" CACHE PATH "Directory containing tiff.lib" FORCE)
    elseif(NOT TIFF_LIBRARY_DIR)
        find_path(_baktsiu_tiff_libdir
            NAMES tiff.lib
            HINTS "${TIFF_ROOT}/lib" "${TIFF_ROOT}" ENV TIFF_ROOT
            PATH_SUFFIXES lib lib/x64 "")
        if(_baktsiu_tiff_libdir)
            set(TIFF_LIBRARY_DIR "${_baktsiu_tiff_libdir}" CACHE PATH "Directory containing tiff.lib" FORCE)
        endif()
    endif()

    if(NOT TIFF_INCLUDE_DIR OR NOT TIFF_LIBRARY_DIR)
        message(FATAL_ERROR
            "USE_TIFF is ON but libtiff was not found.\n"
            "  Install with vcpkg (tiff:x64-windows) and copy into third_party/libtiff\n"
            "  or set TIFF_ROOT / TIFF_INCLUDE_DIR + TIFF_LIBRARY_DIR,\n"
            "  or turn off TIFF: -DUSE_TIFF=OFF")
    endif()

    target_include_directories(${PROJECT_NAME} PRIVATE "${TIFF_INCLUDE_DIR}")
    if(EXISTS "${TIFF_LIBRARY_DIR}/tiff.lib")
        list(APPEND TIFF_LIBS "${TIFF_LIBRARY_DIR}/tiff.lib")
    endif()
    if(TIFF_LIBS STREQUAL "")
        message(FATAL_ERROR "USE_TIFF: tiff.lib not found in TIFF_LIBRARY_DIR=${TIFF_LIBRARY_DIR}")
    endif()

    set(_baktsiu_tiff_bin_hints)
    if(TIFF_ROOT)
        list(APPEND _baktsiu_tiff_bin_hints "${TIFF_ROOT}/bin" "${TIFF_ROOT}")
    endif()
    list(APPEND _baktsiu_tiff_bin_hints "${_baktsiu_tiff_repo_default}/bin" "${_baktsiu_tiff_repo_default}")
    if(TIFF_LIBRARY_DIR)
        list(APPEND _baktsiu_tiff_bin_hints "${TIFF_LIBRARY_DIR}/../bin")
    endif()
    if(DEFINED ENV{TIFF_ROOT})
        list(APPEND _baktsiu_tiff_bin_hints "$ENV{TIFF_ROOT}/bin" "$ENV{TIFF_ROOT}")
    endif()
    file(GLOB _baktsiu_tiff_dlls
        LIST_DIRECTORIES false
        ${_baktsiu_tiff_bin_hints}/tiff.dll
        ${_baktsiu_tiff_bin_hints}/liblzma.dll
        ${_baktsiu_tiff_bin_hints}/z.dll)
    if(_baktsiu_tiff_dlls)
        list(REMOVE_DUPLICATES _baktsiu_tiff_dlls)
        set(TIFF_DLLS "${_baktsiu_tiff_dlls}" CACHE INTERNAL "libtiff runtime DLLs for post-build copy")
    endif()
endif()

set(SVG_LIBS "")
set(SVG_DLLS "")
if(USE_SVG)
    set(_baktsiu_svg_repo_default "${CMAKE_SOURCE_DIR}/third_party/lunasvg")

    set(SVG_ROOT "" CACHE PATH "Root of lunasvg dev tree (include/, lib/, bin/)")
    set(SVG_INCLUDE_DIR "" CACHE PATH "Directory containing lunasvg.h")
    set(SVG_LIBRARY_DIR "" CACHE PATH "Directory containing lunasvg.lib")

    if(SVG_INCLUDE_DIR AND NOT EXISTS "${SVG_INCLUDE_DIR}/lunasvg.h")
        unset(SVG_INCLUDE_DIR CACHE)
    endif()
    if(SVG_LIBRARY_DIR AND NOT EXISTS "${SVG_LIBRARY_DIR}/lunasvg.lib")
        unset(SVG_LIBRARY_DIR CACHE)
    endif()

    if(EXISTS "${_baktsiu_svg_repo_default}/include/lunasvg.h")
        set(SVG_INCLUDE_DIR "${_baktsiu_svg_repo_default}/include" CACHE PATH "Directory containing lunasvg.h" FORCE)
    elseif(SVG_ROOT AND EXISTS "${SVG_ROOT}/include/lunasvg.h")
        set(SVG_INCLUDE_DIR "${SVG_ROOT}/include" CACHE PATH "Directory containing lunasvg.h" FORCE)
    elseif(NOT SVG_INCLUDE_DIR)
        find_path(_baktsiu_svg_include
            NAMES lunasvg.h
            HINTS "${SVG_ROOT}" ENV SVG_ROOT
            PATH_SUFFIXES include "")
        if(_baktsiu_svg_include)
            set(SVG_INCLUDE_DIR "${_baktsiu_svg_include}" CACHE PATH "Directory containing lunasvg.h" FORCE)
        endif()
    endif()

    if(EXISTS "${_baktsiu_svg_repo_default}/lib/lunasvg.lib")
        set(SVG_LIBRARY_DIR "${_baktsiu_svg_repo_default}/lib" CACHE PATH "Directory containing lunasvg.lib" FORCE)
    elseif(SVG_ROOT AND EXISTS "${SVG_ROOT}/lib/lunasvg.lib")
        set(SVG_LIBRARY_DIR "${SVG_ROOT}/lib" CACHE PATH "Directory containing lunasvg.lib" FORCE)
    elseif(NOT SVG_LIBRARY_DIR)
        find_path(_baktsiu_svg_libdir
            NAMES lunasvg.lib
            HINTS "${SVG_ROOT}/lib" "${SVG_ROOT}" ENV SVG_ROOT
            PATH_SUFFIXES lib lib/x64 "")
        if(_baktsiu_svg_libdir)
            set(SVG_LIBRARY_DIR "${_baktsiu_svg_libdir}" CACHE PATH "Directory containing lunasvg.lib" FORCE)
        endif()
    endif()

    if(NOT SVG_INCLUDE_DIR OR NOT SVG_LIBRARY_DIR)
        message(FATAL_ERROR
            "USE_SVG is ON but lunasvg was not found.\n"
            "  Install with vcpkg (lunasvg:x64-windows) and copy into third_party/lunasvg\n"
            "  or set SVG_ROOT / SVG_INCLUDE_DIR + SVG_LIBRARY_DIR,\n"
            "  or turn off SVG: -DUSE_SVG=OFF")
    endif()

    target_include_directories(${PROJECT_NAME} PRIVATE "${SVG_INCLUDE_DIR}")
    if(EXISTS "${SVG_LIBRARY_DIR}/lunasvg.lib")
        list(APPEND SVG_LIBS "${SVG_LIBRARY_DIR}/lunasvg.lib")
    endif()
    if(SVG_LIBS STREQUAL "")
        message(FATAL_ERROR "USE_SVG: lunasvg.lib not found in SVG_LIBRARY_DIR=${SVG_LIBRARY_DIR}")
    endif()

    set(_baktsiu_svg_bin_hints)
    if(SVG_ROOT)
        list(APPEND _baktsiu_svg_bin_hints "${SVG_ROOT}/bin" "${SVG_ROOT}")
    endif()
    list(APPEND _baktsiu_svg_bin_hints "${_baktsiu_svg_repo_default}/bin" "${_baktsiu_svg_repo_default}")
    if(SVG_LIBRARY_DIR)
        list(APPEND _baktsiu_svg_bin_hints "${SVG_LIBRARY_DIR}/../bin")
    endif()
    if(DEFINED ENV{SVG_ROOT})
        list(APPEND _baktsiu_svg_bin_hints "$ENV{SVG_ROOT}/bin" "$ENV{SVG_ROOT}")
    endif()
    file(GLOB _baktsiu_svg_dlls
        LIST_DIRECTORIES false
        ${_baktsiu_svg_bin_hints}/lunasvg.dll)
    if(_baktsiu_svg_dlls)
        list(REMOVE_DUPLICATES _baktsiu_svg_dlls)
        set(SVG_DLLS "${_baktsiu_svg_dlls}" CACHE INTERNAL "lunasvg runtime DLLs for post-build copy")
    endif()
endif()

target_link_libraries(${PROJECT_NAME} PRIVATE glfw spdlog ${GL_LIBS} ${OPENEXR_LIB} ${VIDEO_LIBS} ${JXL_LIBS} ${AVIF_LIBS} ${WEBP_LIBS} ${TIFF_LIBS} ${SVG_LIBS})

if(WIN32 AND USE_VIDEO AND MPV_DLL)
    add_custom_command(
        TARGET ${PROJECT_NAME} POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy_if_different "${MPV_DLL}" $<TARGET_FILE_DIR:${PROJECT_NAME}>)
endif()

if(WIN32 AND USE_JXL AND JXL_DLLS)
    foreach(_baktsiu_jxl_dll ${JXL_DLLS})
        add_custom_command(
            TARGET ${PROJECT_NAME} POST_BUILD
            COMMAND ${CMAKE_COMMAND} -E copy_if_different "${_baktsiu_jxl_dll}" $<TARGET_FILE_DIR:${PROJECT_NAME}>)
    endforeach()
endif()

if(WIN32 AND USE_AVIF AND AVIF_DLLS)
    foreach(_baktsiu_avif_dll ${AVIF_DLLS})
        add_custom_command(
            TARGET ${PROJECT_NAME} POST_BUILD
            COMMAND ${CMAKE_COMMAND} -E copy_if_different "${_baktsiu_avif_dll}" $<TARGET_FILE_DIR:${PROJECT_NAME}>)
    endforeach()
endif()

if(WIN32 AND USE_WEBP AND WEBP_DLLS)
    foreach(_baktsiu_webp_dll ${WEBP_DLLS})
        add_custom_command(
            TARGET ${PROJECT_NAME} POST_BUILD
            COMMAND ${CMAKE_COMMAND} -E copy_if_different "${_baktsiu_webp_dll}" $<TARGET_FILE_DIR:${PROJECT_NAME}>)
    endforeach()
endif()

if(WIN32 AND USE_TIFF AND TIFF_DLLS)
    foreach(_baktsiu_tiff_dll ${TIFF_DLLS})
        add_custom_command(
            TARGET ${PROJECT_NAME} POST_BUILD
            COMMAND ${CMAKE_COMMAND} -E copy_if_different "${_baktsiu_tiff_dll}" $<TARGET_FILE_DIR:${PROJECT_NAME}>)
    endforeach()
endif()

if(WIN32 AND USE_SVG AND SVG_DLLS)
    foreach(_baktsiu_svg_dll ${SVG_DLLS})
        add_custom_command(
            TARGET ${PROJECT_NAME} POST_BUILD
            COMMAND ${CMAKE_COMMAND} -E copy_if_different "${_baktsiu_svg_dll}" $<TARGET_FILE_DIR:${PROJECT_NAME}>)
    endforeach()
endif()

if(USE_OPENEXR AND WIN32)
    target_link_libraries(${PROJECT_NAME} PRIVATE zlibstatic)
endif()

if(MSVC)
    set_target_properties(${PROJECT_NAME} PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}")
    set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})
elseif(APPLE)
    set_target_properties(${PROJECT_NAME} PROPERTIES MACOSX_BUNDLE TRUE)
    set_target_properties(${PROJECT_NAME} PROPERTIES MACOSX_BUNDLE_BUNDLE_NAME "BakTsiu")
    set_target_properties(${PROJECT_NAME} PROPERTIES MACOSX_BUNDLE_BUNDLE_GUI_IDENTIFIER "com.im.BakTsiu")
    set_target_properties(${PROJECT_NAME} PROPERTIES MACOSX_BUNDLE_ICON_FILE icon.icns)
    set_source_files_properties(${PROJECT_SOURCE_DIR}/resources/icon.icns PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
endif()

if(USE_NVTX AND WIN32)
    add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy "$ENV{NVTOOLSEXT_PATH}bin/x64/nvToolsExt64_1.dll" $<TARGET_FILE_DIR:${PROJECT_NAME}>)
endif()

if(WIN32)
    install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION "bin")
elseif(APPLE)
    install(TARGETS ${PROJECT_NAME} BUNDLE DESTINATION "/Applications")
else()
    install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION "bin")
    install(FILES ${PROJECT_SOURCE_DIR}/resources/baktsiu.desktop DESTINATION "/usr/share/applications")
    install(FILES ${PROJECT_SOURCE_DIR}/resources/app.png DESTINATION "/usr/share/pixmaps" RENAME baktsiu.png)
endif()